tests/reference/print_generic-t3-e156c72.out
Starting main...
Arena created...
Parsing args...
Arg 1: tests/t3.mlir
Arg 2: --no-error-banner
Arg 3: --line=-1
Arg 4: --column=-1
Done parsing args. use_construction=0
Syntax error (19:35): Use of undefined SSA value
            %4 = memref.load %arg0[%2, %3] : memref<10x20xf32>
                                  ^
